--- a/exames/templates/gerenciar_pedidos.html
+++ b/exames/templates/gerenciar_pedidos.html
@@ -16,6 +16,13 @@
             {% endfor %}
         {% endif %}
 
+        <div style="display: flex; flex-direction: row-reverse;">
+            <div>
+                <a style="text-decoration: none;" href="{% url 'solicitar_exames' %}" class="btn-default">Voltar</a>
+            </div>
+        </div>
+
+        <br>
         <div class="card card-view">
             <table>
                 <tr>
