--- a/templates/bases/base.html
+++ b/templates/bases/base.html
@@ -11,6 +11,17 @@
     {% block 'head' %}{% endblock %}
   </head>
   <body>
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">
+                <img width="30px" src="{% static 'geral/img/logo.png' %}" alt="VitaLAB"> VitaLab
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </nav>
 
     {% block 'conteudo' %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
